Cores e responsividade adicionados

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <title>Jogo da memoria</title>
 </head>
 <body>
@@ -13,36 +14,38 @@
         <h1>Jogo da memoria</h1>
 
         <div class="organizer-cards">
+
             <div>
-                <div class="card">1</div>
+                <div class="card">Jogo da memoria</div>
             </div>
 
             <div>
-                <div class="card">2</div>
+                <div class="card">Jogo da memoria</div>
             </div>
 
             <div>
-                <div class="card">3</div>
+                <div class="card">Jogo da memoria</div>
             </div>
             <div>
-                <div class="card">4</div>
+                <div class="card">Jogo da memoria</div>
             </div>
 
             <div>
-                <div class="card">5</div>
+                <div class="card">Jogo da memoria</div>
             </div>
 
             <div>
-                <div class="card">6</div>
+                <div class="card">Jogo da memoria</div>
             </div>
 
             <div>
-                <div class="card">7</div>
+                <div class="card">Jogo da memoria</div>
             </div>
 
             <div>
-                <div class="card">8</div>
+                <div class="card">Jogo da memoria</div>
             </div>
+
         </div>
 
         <Button id="restart">Recomeçar</Button>
