Alteração na fonte e no botão de recomeçar

--- a/index.html
+++ b/index.html
@@ -7,43 +7,44 @@
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <title>Jogo da memoria</title>
+    <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
+    <title>Jogo da memória</title>
 </head>
 <body>
     <section>
-        <h1>Jogo da memoria</h1>
+        <h1>Jogo da memória</h1>
 
         <div class="organizer-cards">
 
             <div>
-                <div class="card">Jogo da memoria</div>
+                <div class="card">Jogo da memória</div>
             </div>
 
             <div>
-                <div class="card">Jogo da memoria</div>
+                <div class="card">Jogo da memória</div>
             </div>
 
             <div>
-                <div class="card">Jogo da memoria</div>
+                <div class="card">Jogo da memória</div>
             </div>
             <div>
-                <div class="card">Jogo da memoria</div>
-            </div>
-
-            <div>
-                <div class="card">Jogo da memoria</div>
+                <div class="card">Jogo da memória</div>
             </div>
 
             <div>
-                <div class="card">Jogo da memoria</div>
+                <div class="card">Jogo da memória</div>
             </div>
 
             <div>
-                <div class="card">Jogo da memoria</div>
+                <div class="card">Jogo da memória</div>
             </div>
 
             <div>
-                <div class="card">Jogo da memoria</div>
+                <div class="card">Jogo da memória</div>
+            </div>
+
+            <div>
+                <div class="card">Jogo da memória</div>
             </div>
 
         </div>
