Cartas com imagens adicionadas

--- a/index.html
+++ b/index.html
@@ -17,35 +17,56 @@
         <div class="organizer-cards">
 
             <div>
-                <div class="card">Jogo da memória</div>
+                <div class="card-img">
+                    <img src="imgs/html.png" alt="html icon">
+                </div>
             </div>
 
             <div>
-                <div class="card">Jogo da memória</div>
+                <div class="card-img">
+                    <img src="imgs/gpt.png" alt="ChatGPT icon">
+                </div>
             </div>
 
             <div>
-                <div class="card">Jogo da memória</div>
-            </div>
-            <div>
-                <div class="card">Jogo da memória</div>
-            </div>
-
-            <div>
-                <div class="card">Jogo da memória</div>
+                <div class="card-img">
+                    <img src="imgs/css.png" alt="css icon">
+                </div>
             </div>
 
             <div>
-                <div class="card">Jogo da memória</div>
+                <div class="card-img">
+                    <img src="imgs/javascript.png" alt="js icon">
+                </div>
             </div>
 
             <div>
-                <div class="card">Jogo da memória</div>
+                <div class="card-img">
+                    <img src="imgs/javascript.png" alt="js icon">
+                </div>
             </div>
 
             <div>
-                <div class="card">Jogo da memória</div>
+                <div class="card-img">
+                    <img src="imgs/html.png" alt="html icon">
+                </div>
             </div>
+
+            <div>
+                <div class="card-img">
+                    <img src="imgs/gpt.png" alt="ChatGPT icon">
+                </div>
+            </div>
+
+            <div>
+                <div class="card-img">
+                    <img src="imgs/css.png" alt="css icon">
+                </div>
+            </div>
+
+            <!-- <div>
+                <div class="card">Jogo da memória</div>
+            </div> -->
 
         </div>
 
