Funções para iniciar e recomeçar o jogo adicionadas

--- a/index.html
+++ b/index.html
@@ -16,62 +16,94 @@
 
         <div class="organizer-cards">
 
-            <div>
-                <div class="card-img">
-                    <img src="imgs/html.png" alt="html icon">
-                </div>
-            </div>
-
-            <div>
-                <div class="card-img">
-                    <img src="imgs/gpt.png" alt="ChatGPT icon">
-                </div>
-            </div>
-
-            <div>
-                <div class="card-img">
-                    <img src="imgs/css.png" alt="css icon">
-                </div>
-            </div>
-
-            <div>
-                <div class="card-img">
-                    <img src="imgs/javascript.png" alt="js icon">
-                </div>
-            </div>
-
-            <div>
-                <div class="card-img">
-                    <img src="imgs/javascript.png" alt="js icon">
-                </div>
-            </div>
-
-            <div>
-                <div class="card-img">
-                    <img src="imgs/html.png" alt="html icon">
-                </div>
-            </div>
-
-            <div>
-                <div class="card-img">
-                    <img src="imgs/gpt.png" alt="ChatGPT icon">
-                </div>
-            </div>
-
-            <div>
-                <div class="card-img">
-                    <img src="imgs/css.png" alt="css icon">
-                </div>
-            </div>
-
-            <!-- <div>
-                <div class="card">Jogo da memória</div>
-            </div> -->
+            
 
         </div>
 
-        <Button id="restart">Recomeçar</Button>
+        <Button id="start" onclick="start('first')">Começar</Button>        
 
     </section>
 </body>
 </html>
+
+<!-- <div>
+                <div class="card-img">
+                    <img src="imgs/html.png" alt="html icon">
+                </div>
+            </div>
+
+            <div>
+                <div class="card-img">
+                    <img src="imgs/gpt.png" alt="ChatGPT icon">
+                </div>
+            </div>
+
+            <div>
+                <div class="card-img">
+                    <img src="imgs/css.png" alt="css icon">
+                </div>
+            </div>
+
+            <div>
+                <div class="card-img">
+                    <img src="imgs/javascript.png" alt="js icon">
+                </div>
+            </div>
+
+            <div>
+                <div class="card-img">
+                    <img src="imgs/javascript.png" alt="js icon">
+                </div>
+            </div>
+
+            <div>
+                <div class="card-img">
+                    <img src="imgs/html.png" alt="html icon">
+                </div>
+            </div>
+
+            <div>
+                <div class="card-img">
+                    <img src="imgs/gpt.png" alt="ChatGPT icon">
+                </div>
+            </div>
+
+            <div>
+                <div class="card-img">
+                    <img src="imgs/css.png" alt="css icon">
+                </div>
+            </div> -->
+
+            <!-- <div id="card-1" onclick="turn()">
+                <div class="card">Jogo da memória</div>
+            </div>
+
+            <div>
+                <div class="card">Jogo da memória</div>
+            </div>
+
+            <div>
+                <div class="card">Jogo da memória</div>
+            </div>
+
+            <div>
+                <div class="card">Jogo da memória</div>
+            </div>
+
+            <div>
+                <div class="card">Jogo da memória</div>
+            </div>
+
+            <div>
+                <div class="card">Jogo da memória</div>
+            </div>
+
+            <div>
+                <div class="card">Jogo da memória</div>
+            </div>
+
+            <div>
+                <div class="card">Jogo da memória</div>
+            </div> -->
+
+            <!-- <Button id="restart">Recomeçar</Button> -->
