Remoção de trecho de codigo comentado

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="PT-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,9 +14,7 @@
     <section>
         <h1>Jogo da memória</h1>
 
-        <div class="organizer-cards">
-
-            
+        <div class="organizer-cards">            
 
         </div>
 
@@ -25,85 +23,3 @@
     </section>
 </body>
 </html>
-
-<!-- <div>
-                <div class="card-img">
-                    <img src="imgs/html.png" alt="html icon">
-                </div>
-            </div>
-
-            <div>
-                <div class="card-img">
-                    <img src="imgs/gpt.png" alt="ChatGPT icon">
-                </div>
-            </div>
-
-            <div>
-                <div class="card-img">
-                    <img src="imgs/css.png" alt="css icon">
-                </div>
-            </div>
-
-            <div>
-                <div class="card-img">
-                    <img src="imgs/javascript.png" alt="js icon">
-                </div>
-            </div>
-
-            <div>
-                <div class="card-img">
-                    <img src="imgs/javascript.png" alt="js icon">
-                </div>
-            </div>
-
-            <div>
-                <div class="card-img">
-                    <img src="imgs/html.png" alt="html icon">
-                </div>
-            </div>
-
-            <div>
-                <div class="card-img">
-                    <img src="imgs/gpt.png" alt="ChatGPT icon">
-                </div>
-            </div>
-
-            <div>
-                <div class="card-img">
-                    <img src="imgs/css.png" alt="css icon">
-                </div>
-            </div> -->
-
-            <!-- <div id="card-1" onclick="turn()">
-                <div class="card">Jogo da memória</div>
-            </div>
-
-            <div>
-                <div class="card">Jogo da memória</div>
-            </div>
-
-            <div>
-                <div class="card">Jogo da memória</div>
-            </div>
-
-            <div>
-                <div class="card">Jogo da memória</div>
-            </div>
-
-            <div>
-                <div class="card">Jogo da memória</div>
-            </div>
-
-            <div>
-                <div class="card">Jogo da memória</div>
-            </div>
-
-            <div>
-                <div class="card">Jogo da memória</div>
-            </div>
-
-            <div>
-                <div class="card">Jogo da memória</div>
-            </div> -->
-
-            <!-- <Button id="restart">Recomeçar</Button> -->
